--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/stylesheet.css" />
+    <script src="assets/js/layout.js"></script>
     <script src="assets/js/animations.js"></script>
     <script src="assets/js/players.js"></script>
     <script src="assets/js/game.js"></script>
@@ -15,7 +16,7 @@
     <h1 id="title" class="text-center">STARWARS - Darkspace Battles</h1>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12">
+            <div class="col-12" id="player-">
                 <h3>Players:</h3>
                 <div class="row">
                     <div class="col-4">
