--- a/index.html
+++ b/index.html
@@ -46,34 +46,29 @@
                             </div>
                           </div>
                     </div>
-                </div>
-                <div class="row">
                     <div class="col-4">
-                        <div class="card">
-                            <img class="card-img-top" src="..." alt="Card image cap">
+                        <div class="card text-center">
+                            <img class="card-img-top" src="assets/images/luke.jpg" alt="Card image cap">
                             <div class="card-body">
-                              <h5 class="card-title">Darth Vader</h5>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <h5 class="card-title">Luke</h5>
                               <a href="#" class="btn btn-primary">Go somewhere</a>
                             </div>
                           </div>
                     </div>
                     <div class="col-4">
-                        <div class="card">
-                            <img class="card-img-top" src="..." alt="Card image cap">
+                        <div class="card text-center">
+                            <img class="card-img-top" src="assets/images/clone.jpg" alt="Card image cap">
                             <div class="card-body">
-                              <h5 class="card-title">Darth Vader</h5>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <h5 class="card-title">Clone</h5>
                               <a href="#" class="btn btn-primary">Go somewhere</a>
                             </div>
                           </div>
                     </div>
                     <div class="col-4">
-                        <div class="card">
-                            <img class="card-img-top" src="..." alt="Card image cap">
+                        <div class="card text-center">
+                            <img class="card-img-top" src="assets/images/dooku.jpg" alt="Card image cap">
                             <div class="card-body">
-                              <h5 class="card-title">Darth Vader</h5>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <h5 class="card-title">Dooku</h5>
                               <a href="#" class="btn btn-primary">Go somewhere</a>
                             </div>
                           </div>
